:sparkles: adding the retraining script to the web app ( has some bugs )

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -48,6 +48,87 @@
     "writer.release()\n",
     "cv2.destroyAllWindows()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "path =\"../videos/training/{}/{}/\".format('test','ibrahim')\n",
+    "all_paths_images= []\n",
+    "for (dirpath, dirnames, filenames) in os.walk(path):\n",
+    " all_paths_images.extend(filenames)\n",
+    "all_paths_images=[os.path.join(path, x) for x in all_paths_images]\n",
+    "all_paths_images.sort(key=lambda x: int(x.split('/')[-1].split('.')[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['../videos/training/test/ibrahim/0.jpg',\n",
+       "  '../videos/training/test/ibrahim/1.jpg',\n",
+       "  '../videos/training/test/ibrahim/2.jpg',\n",
+       "  '../videos/training/test/ibrahim/3.jpg',\n",
+       "  '../videos/training/test/ibrahim/4.jpg',\n",
+       "  '../videos/training/test/ibrahim/5.jpg',\n",
+       "  '../videos/training/test/ibrahim/6.jpg',\n",
+       "  '../videos/training/test/ibrahim/7.jpg',\n",
+       "  '../videos/training/test/ibrahim/8.jpg',\n",
+       "  '../videos/training/test/ibrahim/9.jpg',\n",
+       "  '../videos/training/test/ibrahim/10.jpg',\n",
+       "  '../videos/training/test/ibrahim/11.jpg',\n",
+       "  '../videos/training/test/ibrahim/12.jpg',\n",
+       "  '../videos/training/test/ibrahim/13.jpg',\n",
+       "  '../videos/training/test/ibrahim/14.jpg',\n",
+       "  '../videos/training/test/ibrahim/15.jpg',\n",
+       "  '../videos/training/test/ibrahim/16.jpg',\n",
+       "  '../videos/training/test/ibrahim/17.jpg',\n",
+       "  '../videos/training/test/ibrahim/18.jpg',\n",
+       "  '../videos/training/test/ibrahim/19.jpg',\n",
+       "  '../videos/training/test/ibrahim/20.jpg',\n",
+       "  '../videos/training/test/ibrahim/21.jpg',\n",
+       "  '../videos/training/test/ibrahim/22.jpg',\n",
+       "  '../videos/training/test/ibrahim/23.jpg',\n",
+       "  '../videos/training/test/ibrahim/24.jpg',\n",
+       "  '../videos/training/test/ibrahim/25.jpg',\n",
+       "  '../videos/training/test/ibrahim/26.jpg',\n",
+       "  '../videos/training/test/ibrahim/27.jpg',\n",
+       "  '../videos/training/test/ibrahim/28.jpg',\n",
+       "  '../videos/training/test/ibrahim/29.jpg',\n",
+       "  '../videos/training/test/ibrahim/30.jpg',\n",
+       "  '../videos/training/test/ibrahim/31.jpg',\n",
+       "  '../videos/training/test/ibrahim/32.jpg',\n",
+       "  '../videos/training/test/ibrahim/33.jpg',\n",
+       "  '../videos/training/test/ibrahim/34.jpg',\n",
+       "  '../videos/training/test/ibrahim/35.jpg',\n",
+       "  '../videos/training/test/ibrahim/36.jpg',\n",
+       "  '../videos/training/test/ibrahim/37.jpg',\n",
+       "  '../videos/training/test/ibrahim/38.jpg',\n",
+       "  '../videos/training/test/ibrahim/39.jpg']]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[all_paths_images]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
